--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,38 +5,44 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <!-- 검색어 입력과 버튼을 한 줄에 배치 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <!-- 검색어 입력 -->
         <EditText
             android:id="@+id/searchInput"
             android:layout_width="0dp"
             android:layout_height="60dp"
             android:layout_weight="1"
             android:hint="검색어를 입력하세요"
+            android:fontFamily="@font/kcchanbit"
             android:padding="10dp"
             android:textSize="18sp" />
 
-        <!-- 검색 버튼 -->
         <Button
             android:id="@+id/searchButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/gamtan"
             android:backgroundTint="@color/button_color"
-            android:textColor="@color/button_text"
+            android:textColor="@color/black"
             android:text="검색" />
     </LinearLayout>
 
-    <!-- 검색 결과를 보여줄 ListView -->
+    <Button
+        android:id="@+id/favoriteButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/gamtan"
+        android:backgroundTint="@color/button_color"
+        android:textColor="@color/black"
+        android:text="즐겨찾기 보기" />
+
     <ListView
         android:id="@+id/resultListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
         android:textSize="18sp" />
-
 </LinearLayout>
